--- a/index.html
+++ b/index.html
@@ -227,15 +227,22 @@
   </div>
 
   <script>
-    let onlineStatus = false;  // To track online status
+    // Variabel untuk melacak status koneksi dan timer
+    let lastResponseTime = Date.now();
+    let statusTimeout;
 
-    function updateDateTime() {
-      const now = new Date();
-      document.getElementById('current-time').textContent = now.toLocaleTimeString();
-      document.getElementById('current-date').textContent = now.toDateString();
+    function updateStatus() {
+      const currentTime = Date.now();
+      const timeDiff = currentTime - lastResponseTime;
+
+      if (timeDiff > 5000) {  // Jika tidak ada respons lebih dari 5 detik
+        document.getElementById('status-led').style.background = 'red';
+        document.getElementById('status-text').textContent = 'Offline';
+      }
     }
-    setInterval(updateDateTime, 1000);
-    updateDateTime();
+
+    // Set interval untuk memeriksa status setiap detik
+    setInterval(updateStatus, 1000);
 
     // --- MQTT Connection ---
     const client = mqtt.connect('wss://9fa472bc0c754eb488098ea8f4bb27f8.s1.eu.hivemq.cloud:8884/mqtt', {
@@ -248,12 +255,12 @@
 
     client.on('connect', () => {
       console.log('Connected to MQTT Broker');
-      onlineStatus = true;
       document.getElementById('status-led').style.background = 'lime';
       document.getElementById('status-text').textContent = 'Online';
       client.subscribe('esp/status/relay1');
       client.subscribe('esp/status/relay2');
       client.publish('esp/get_status', 'REQ');
+      lastResponseTime = Date.now();  // Reset timer saat pertama kali terhubung
     });
 
     client.on('message', (topic, message) => {
@@ -271,40 +278,39 @@
 
         checkbox.checked = state === 'ON';
         status.textContent = state;
+        lastResponseTime = Date.now();  // Reset timer setiap kali menerima status baru
       }
     });
 
     client.on('error', (error) => {
       console.error('Connection error:', error);
-      onlineStatus = false;
       document.getElementById('status-led').style.background = 'red';
       document.getElementById('status-text').textContent = 'Offline';
     });
 
     client.on('close', () => {
       console.log('Disconnected');
-      onlineStatus = false;
       document.getElementById('status-led').style.background = 'red';
       document.getElementById('status-text').textContent = 'Offline';
     });
 
-    // Monitor for online/offline status
-    setInterval(() => {
-      if (onlineStatus) {
-        // Check if last message was sent within a certain period to stay online
-        // This part can be enhanced further to check last activity or heartbeat
-        // In this case, you can use a timeout to reset onlineStatus to false after a delay of inactivity
-      }
-    }, 10000);
+    // Deteksi offline dan hubungkan ulang
+    client.on('offline', () => {
+      console.log('MQTT client offline');
+      document.getElementById('status-led').style.background = 'red';
+      document.getElementById('status-text').textContent = 'Offline';
+    });
 
     document.getElementById('relay1Btn').addEventListener('change', (e) => {
       const state = e.target.checked ? 'ON' : 'OFF';
       client.publish('esp/relay1', state);
+      lastResponseTime = Date.now();  // Reset timer saat tombol ditekan
     });
 
     document.getElementById('relay2Btn').addEventListener('change', (e) => {
       const state = e.target.checked ? 'ON' : 'OFF';
       client.publish('esp/relay2', state);
+      lastResponseTime = Date.now();  // Reset timer saat tombol ditekan
     });
   </script>
 </body>
