--- a/index.html
+++ b/index.html
@@ -198,24 +198,6 @@
               <span class="slider"></span>
             </label>
           </div>
-          <div class="device-card">
-            <div class="device-icon"><i class="fas fa-ban"></i></div>
-            <div class="device-name">Spare 1</div>
-            <div class="device-status">OFF</div>
-            <label class="toggle-switch">
-              <input type="checkbox" disabled>
-              <span class="slider"></span>
-            </label>
-          </div>
-          <div class="device-card">
-            <div class="device-icon"><i class="fas fa-ban"></i></div>
-            <div class="device-name">Spare 2</div>
-            <div class="device-status">OFF</div>
-            <label class="toggle-switch">
-              <input type="checkbox" disabled>
-              <span class="slider"></span>
-            </label>
-          </div>
         </div>
       </div>
     </div>
@@ -251,7 +233,15 @@
       client.subscribe('esp/status/relay1');
       client.subscribe('esp/status/relay2');
       client.publish('esp/get_status', 'REQ');
+      // Reset status update timeout
+      clearTimeout(statusTimeout);
+      statusTimeout = setTimeout(() => {
+        document.getElementById('status-text').textContent = 'Offline';
+        document.getElementById('status-led').style.background = 'red';
+      }, 5000); // 5 seconds timeout
     });
+
+    let statusTimeout;
 
     client.on('message', (topic, message) => {
       const state = message.toString();
@@ -281,6 +271,12 @@
       console.log('Disconnected');
       document.getElementById('status-led').style.background = 'red';
       document.getElementById('status-text').textContent = 'Offline';
+      // Reset status update timeout
+      clearTimeout(statusTimeout);
+      statusTimeout = setTimeout(() => {
+        document.getElementById('status-text').textContent = 'Offline';
+        document.getElementById('status-led').style.background = 'red';
+      }, 5000); // 5 seconds timeout
     });
 
     document.getElementById('relay1Btn').addEventListener('change', (e) => {
