--- a/index.html
+++ b/index.html
@@ -209,6 +209,299 @@
   </div>
 
   <script>
+    function updateDateTime() {
+      const now = new Date();
+      document.getElementById('current-time').textContent = now.toLocaleTimeString();
+      document.getElementById('current-date').textContent = now.toDateString();
+    }
+    setInterval(updateDateTime, 1000);
+    updateDateTime();
+
+    // --- MQTT Connection ---
+    const client = mqtt.connect('wss://9fa472bc0c754eb488098ea8f4bb27f8.s1.eu.hivemq.cloud:8884/mqtt', {
+      clientId: 'webClient_' + Math.random().toString(16).substr(2, 8),
+      username: 'Attamationhtml',
+      password: 'Attamationhtml21',
+      clean: true,
+      connectTimeout: 4000
+    });
+
+    client.on('connect', () => {
+      console.log('Connected to MQTT Broker');
+      document.getElementById('status-led').style.background = 'lime';
+      document.getElementById('status-text').textContent = 'Online';
+      client.subscribe('esp/status/relay1');
+      client.subscribe('esp/status/relay2');
+      client.publish('esp/get_status', 'REQ');
+      // Reset status update timeout
+      clearTimeout(statusTimeout);
+      statusTimeout = setTimeout(() => {
+        document.getElementById('status-text').textContent = 'Offline';
+        document.getElementById('status-led').style.background = 'red';
+      }, 5000); // 5 seconds timeout
+    });
+
+    let statusTimeout;
+
+    client.on('message', (topic, message) => {
+      const state = message.toString();
+      let relay = '';
+      if (topic.includes('relay1')) {
+        relay = 'relay1';
+      } else if (topic.includes('relay2')) {
+        relay = 'relay2';
+      }
+      if (relay) {
+        const checkbox = document.getElementById(relay + 'Btn');
+        const card = checkbox.closest('.device-card');
+        const status = card.querySelector('.device-status');
+
+        checkbox.checked = state === 'ON';
+        status.textContent = state;
+      }
+    });
+
+    client.on('error', (error) => {
+      console.error('Connection error:', error);
+      document.getElementById('status-led').style.background = 'red';
+      document.getElementById('status-text').textContent = 'Offline';
+    });
+
+    client.on('close', () => {
+      console.log('Disconnected');
+      document.getElementById('status-led').style.background = 'red';
+      document.getElementById('status-text').textContent = 'Offline';
+      // Reset status update timeout
+      clearTimeout(statusTimeout);
+      statusTimeout = setTimeout(() => {
+        document.getElementById('status-text').textContent = 'Offline';
+        document.getElementById('status-led').style.background = 'red';
+      }, 5000); // 5 seconds timeout
+    });
+
+    document.getElementById('relay1Btn').addEventListener('change', (e) => {
+      const state = e.target.checked ? 'ON' : 'OFF';
+      client.publish('esp/relay1', state);
+    });
+
+    document.getElementById('relay2Btn').addEventListener('change', (e) => {
+      const state = e.target.checked ? 'ON' : 'OFF';
+      client.publish('esp/relay2', state);
+    });
+  </script>
+</body>
+</html>
+!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Attamation Room Control</title>
+  <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Roboto', sans-serif;
+      background: linear-gradient(to bottom right, #1e1e2f, #2b2b45);
+      color: #f5f5f5;
+    }
+    .container {
+      max-width: 960px;
+      margin: auto;
+      padding: 20px;
+    }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+    .status-indicator {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      font-size: 14px;
+    }
+    .indicator {
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background: red;
+    }
+    .logo {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 24px;
+      font-weight: bold;
+      text-align: center;
+      flex-grow: 1;
+    }
+    .time-date {
+      font-size: 14px;
+      text-align: right;
+    }
+    .dashboard {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 20px;
+    }
+    .panel {
+      flex: 1;
+      min-width: 300px;
+      background: #292947;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
+    .panel-title {
+      font-weight: 600;
+      margin-bottom: 15px;
+      font-size: 16px;
+      color: #00ffff;
+    }
+    .temperature-display {
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
+    .temperature-unit {
+      font-size: 18px;
+    }
+    .temperature-status {
+      font-size: 14px;
+      color: #4caf50;
+    }
+    .devices-grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 15px;
+    }
+    .device-card {
+      background: #3b3b5b;
+      border-radius: 8px;
+      padding: 15px;
+      text-align: center;
+      box-shadow: inset 0 0 5px rgba(0,0,0,0.1);
+    }
+    .device-icon i {
+      font-size: 20px;
+      margin-bottom: 5px;
+      color: #ffd700;
+    }
+    .device-name {
+      font-weight: 500;
+      margin-top: 5px;
+    }
+    .device-status {
+      font-size: 12px;
+      margin: 5px 0;
+    }
+    .toggle-switch {
+      position: relative;
+      display: inline-block;
+      width: 36px;
+      height: 20px;
+    }
+    .toggle-switch input {
+      display: none;
+    }
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0; left: 0;
+      right: 0; bottom: 0;
+      background-color: #ccc;
+      border-radius: 20px;
+      transition: .4s;
+    }
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 14px;
+      width: 14px;
+      left: 3px;
+      bottom: 3px;
+      background-color: white;
+      transition: .4s;
+      border-radius: 50%;
+    }
+    .toggle-switch input:checked + .slider {
+      background-color: #4caf50;
+    }
+    .toggle-switch input:checked + .slider:before {
+      transform: translateX(16px);
+    }
+    .notification {
+      margin-top: 30px;
+      background: #fff3cd;
+      border: 1px solid #ffeeba;
+      padding: 15px;
+      border-radius: 8px;
+      color: #000;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <div class="status-indicator">
+        <div class="indicator" id="status-led"></div>
+        <span id="status-text">Offline</span>
+      </div>
+      <div class="logo">ATTAMATION</div>
+      <div class="time-date">
+        <div class="time" id="current-time">00:00:00</div>
+        <div class="date" id="current-date">January 1, 2023</div>
+      </div>
+    </header>
+
+    <div class="dashboard">
+      <div class="panel">
+        <div class="panel-title">
+          <i class="fas fa-thermometer-half"></i> ROOM TEMPERATURE
+        </div>
+        <div class="temperature-display">
+          <div class="temperature-value" id="temperature">24.5<span class="temperature-unit">°C</span></div>
+          <div class="temperature-status" id="temperature-status">Comfortable</div>
+        </div>
+      </div>
+
+      <div class="panel">
+        <div class="panel-title">
+          <i class="fas fa-lightbulb"></i> DEVICE CONTROL
+        </div>
+        <div class="devices-grid">
+          <div class="device-card" data-device="relay1">
+            <div class="device-icon"><i class="fas fa-toggle-on"></i></div>
+            <div class="device-name">Relay 1</div>
+            <div class="device-status">OFF</div>
+            <label class="toggle-switch">
+              <input type="checkbox" id="relay1Btn">
+              <span class="slider"></span>
+            </label>
+          </div>
+          <div class="device-card" data-device="relay2">
+            <div class="device-icon"><i class="fas fa-toggle-on"></i></div>
+            <div class="device-name">Relay 2</div>
+            <div class="device-status">OFF</div>
+            <label class="toggle-switch">
+              <input type="checkbox" id="relay2Btn">
+              <span class="slider"></span>
+            </label>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="notification" id="notification">
+      <div class="notification-title">System Alert</div>
+      <div class="notification-message" id="notification-message">Temperature is rising above normal levels.</div>
+    </div>
+  </div>
+
+  <script>
     let relay1State = 'OFF';
     let relay2State = 'OFF';
 
