--- a/index.html
+++ b/index.html
@@ -1,286 +1,129 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Attamation Room Control</title>
-  <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Roboto', sans-serif;
-      background: linear-gradient(to bottom right, #1e1e2f, #2b2b45);
-      color: #f5f5f5;
-    }
-    .container {
-      max-width: 960px;
-      margin: auto;
-      padding: 20px;
-    }
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 20px;
-    }
-    .status-indicator {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      font-size: 14px;
-    }
-    .indicator {
-      width: 12px;
-      height: 12px;
-      border-radius: 50%;
-      background: red;
-    }
-    .logo {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 24px;
-      font-weight: bold;
-      text-align: center;
-      flex-grow: 1;
-    }
-    .time-date {
-      font-size: 14px;
-      text-align: right;
-    }
-    .dashboard {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 20px;
-    }
-    .panel {
-      flex: 1;
-      min-width: 300px;
-      background: #292947;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-    }
-    .panel-title {
-      font-weight: 600;
-      margin-bottom: 15px;
-      font-size: 16px;
-      color: #00ffff;
-    }
-    .temperature-display {
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
-    .temperature-unit {
-      font-size: 18px;
-    }
-    .temperature-status {
-      font-size: 14px;
-      color: #4caf50;
-    }
-    .devices-grid {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 15px;
-    }
-    .device-card {
-      background: #3b3b5b;
-      border-radius: 8px;
-      padding: 15px;
-      text-align: center;
-      box-shadow: inset 0 0 5px rgba(0,0,0,0.1);
-    }
-    .device-icon i {
-      font-size: 20px;
-      margin-bottom: 5px;
-      color: #ffd700;
-    }
-    .device-name {
-      font-weight: 500;
-      margin-top: 5px;
-    }
-    .device-status {
-      font-size: 12px;
-      margin: 5px 0;
-    }
-    .toggle-switch {
-      position: relative;
-      display: inline-block;
-      width: 36px;
-      height: 20px;
-    }
-    .toggle-switch input {
-      display: none;
-    }
-    .slider {
-      position: absolute;
-      cursor: pointer;
-      top: 0; left: 0;
-      right: 0; bottom: 0;
-      background-color: #ccc;
-      border-radius: 20px;
-      transition: .4s;
-    }
-    .slider:before {
-      position: absolute;
-      content: "";
-      height: 14px;
-      width: 14px;
-      left: 3px;
-      bottom: 3px;
-      background-color: white;
-      transition: .4s;
-      border-radius: 50%;
-    }
-    .toggle-switch input:checked + .slider {
-      background-color: #4caf50;
-    }
-    .toggle-switch input:checked + .slider:before {
-      transform: translateX(16px);
-    }
-    .notification {
-      margin-top: 30px;
-      background: #fff3cd;
-      border: 1px solid #ffeeba;
-      padding: 15px;
-      border-radius: 8px;
-      color: #000;
-    }
-  </style>
-</head>
+#include <ESP8266WiFi.h>
+#include <WiFiClientSecure.h>
+#include <PubSubClient.h>
 
-<body>
-  <div class="container">
-    <header>
-      <div class="status-indicator">
-        <div class="indicator" id="status-led"></div>
-        <span id="status-text">Offline</span>
-      </div>
-      <div class="logo">ATTAMATION</div>
-      <div class="time-date">
-        <div class="time" id="current-time">00:00:00</div>
-        <div class="date" id="current-date">January 1, 2023</div>
-      </div>
-    </header>
+// Ganti dengan WiFi kamu
+const char* ssid = "SUDARMAJI";
+const char* password = "djisamsoe";
 
-    <div class="dashboard">
-      <div class="panel">
-        <div class="panel-title">
-          <i class="fas fa-thermometer-half"></i> ROOM TEMPERATURE
-        </div>
-        <div class="temperature-display">
-          <div class="temperature-value" id="temperature">24.5<span class="temperature-unit">°C</span></div>
-          <div class="temperature-status" id="temperature-status">Comfortable</div>
-        </div>
-      </div>
+// HiveMQ Cloud
+const char* mqtt_server = "9fa472bc0c754eb488098ea8f4bb27f8.s1.eu.hivemq.cloud";
+const int mqtt_port = 8883;  // Port SSL MQTT
+const char* mqtt_username = "Attamationhtml";
+const char* mqtt_password = "Attamationhtml21";
 
-      <div class="panel">
-        <div class="panel-title">
-          <i class="fas fa-lightbulb"></i> DEVICE CONTROL
-        </div>
-        <div class="devices-grid">
-          <div class="device-card" data-device="relay1">
-            <div class="device-icon"><i class="fas fa-toggle-on"></i></div>
-            <div class="device-name">Relay 1</div>
-            <div class="device-status">OFF</div>
-            <label class="toggle-switch">
-              <input type="checkbox" id="relay1Btn">
-              <span class="slider"></span>
-            </label>
-          </div>
-          <div class="device-card" data-device="relay2">
-            <div class="device-icon"><i class="fas fa-toggle-on"></i></div>
-            <div class="device-name">Relay 2</div>
-            <div class="device-status">OFF</div>
-            <label class="toggle-switch">
-              <input type="checkbox" id="relay2Btn">
-              <span class="slider"></span>
-            </label>
-          </div>
-        </div>
-      </div>
-    </div>
+WiFiClientSecure espClient;
+PubSubClient client(espClient);
 
-    <div class="notification" id="notification">
-      <div class="notification-title">System Alert</div>
-      <div class="notification-message" id="notification-message">Temperature is rising above normal levels.</div>
-    </div>
-  </div>
+const int relay1Pin = D5;  // Relay 1 di pin D5
+const int relay2Pin = D6;  // Relay 2 di pin D6
 
-  <script>
-    let relay1State = 'OFF';
-    let relay2State = 'OFF';
+void setup() {
+  Serial.begin(115200);
 
-    function updateDateTime() {
-      const now = new Date();
-      document.getElementById('current-time').textContent = now.toLocaleTimeString();
-      document.getElementById('current-date').textContent = now.toDateString();
+  pinMode(relay1Pin, OUTPUT);
+  pinMode(relay2Pin, OUTPUT);
+
+  digitalWrite(relay1Pin, HIGH);  // Relay OFF di awal (ingat logika terbalik)
+  digitalWrite(relay2Pin, HIGH);
+
+  WiFi.begin(ssid, password);
+  Serial.println("Connecting to WiFi...");
+  
+  while (WiFi.status() != WL_CONNECTED) {
+    delay(500);
+    Serial.print(".");
+  }
+  Serial.println("\nWiFi connected");
+
+  espClient.setInsecure(); // Untuk SSL tanpa verifikasi sertifikat
+  
+  client.setServer(mqtt_server, mqtt_port);
+  client.setCallback(callback);
+
+  connectToMqtt();
+}
+
+void connectToMqtt() {
+  while (!client.connected()) {
+    Serial.print("Connecting to MQTT...");
+    String clientId = "esp8266Client-" + String(random(0xffff), HEX);
+
+    if (client.connect(clientId.c_str(), mqtt_username, mqtt_password)) {
+      Serial.println(" connected!");
+
+      // Subscribe ke topik kontrol
+      client.subscribe("esp/relay1");
+      client.subscribe("esp/relay2");
+      client.subscribe("esp/get_status");
+
+      // Publish status aktual relay
+      publishRelayStatus();
+    } else {
+      Serial.print(" failed, rc=");
+      Serial.print(client.state());
+      Serial.println(" try again in 5 seconds");
+      delay(5000);
     }
-    setInterval(updateDateTime, 1000);
-    updateDateTime();
+  }
+}
 
-    // --- MQTT Connection ---
-    const client = mqtt.connect('wss://9fa472bc0c754eb488098ea8f4bb27f8.s1.eu.hivemq.cloud:8884/mqtt', {
-      clientId: 'webClient_' + Math.random().toString(16).substr(2, 8),
-      username: 'Attamationhtml',
-      password: 'Attamationhtml21',
-      clean: true,
-      connectTimeout: 4000
-    });
+void publishRelayStatus() {
+  // Publish status relay 1
+  if (digitalRead(relay1Pin) == LOW) {
+    client.publish("esp/status/relay1", "ON");
+  } else {
+    client.publish("esp/status/relay1", "OFF");
+  }
 
-    client.on('connect', () => {
-      console.log('Connected to MQTT Broker');
-      document.getElementById('status-led').style.background = 'lime';
-      document.getElementById('status-text').textContent = 'Online';
-      client.subscribe('esp/status/relay1');
-      client.subscribe('esp/status/relay2');
-      client.publish('esp/get_status', 'REQ');
-    });
+  // Publish status relay 2
+  if (digitalRead(relay2Pin) == LOW) {
+    client.publish("esp/status/relay2", "ON");
+  } else {
+    client.publish("esp/status/relay2", "OFF");
+  }
+}
 
-    client.on('message', (topic, message) => {
-      const state = message.toString();
-      let relay = '';
-      if (topic.includes('relay1')) {
-        relay = 'relay1';
-        relay1State = state; // Save the relay state
-      } else if (topic.includes('relay2')) {
-        relay = 'relay2';
-        relay2State = state; // Save the relay state
-      }
-      if (relay) {
-        const checkbox = document.getElementById(relay + 'Btn');
-        const card = checkbox.closest('.device-card');
-        const status = card.querySelector('.device-status');
+void callback(char* topic, byte* payload, unsigned int length) {
+  String message;
+  for (unsigned int i = 0; i < length; i++) {
+    message += (char)payload[i];
+  }
 
-        checkbox.checked = state === 'ON';
-        status.textContent = state;
-      }
-    });
+  Serial.print("Topic: ");
+  Serial.print(topic);
+  Serial.print(" => ");
+  Serial.println(message);
 
-    client.on('error', (error) => {
-      console.error('Connection error:', error);
-      document.getElementById('status-led').style.background = 'red';
-      document.getElementById('status-text').textContent = 'Offline';
-    });
+  if (String(topic) == "esp/relay1") {
+    if (message == "ON") {
+      digitalWrite(relay1Pin, LOW);  // Relay ON (logika terbalik)
+      client.publish("esp/status/relay1", "ON");
+    } else if (message == "OFF") {
+      digitalWrite(relay1Pin, HIGH); // Relay OFF
+      client.publish("esp/status/relay1", "OFF");
+    }
+  }
 
-    client.on('close', () => {
-      console.log('Disconnected');
-      document.getElementById('status-led').style.background = 'red';
-      document.getElementById('status-text').textContent = 'Offline';
-    });
+  if (String(topic) == "esp/relay2") {
+    if (message == "ON") {
+      digitalWrite(relay2Pin, LOW);  // Relay ON
+      client.publish("esp/status/relay2", "ON");
+    } else if (message == "OFF") {
+      digitalWrite(relay2Pin, HIGH); // Relay OFF
+      client.publish("esp/status/relay2", "OFF");
+    }
+  }
 
-    document.getElementById('relay1Btn').addEventListener('change', (e) => {
-      const state = e.target.checked ? 'ON' : 'OFF';
-      client.publish('esp/relay1', state);
-      relay1State = state; // Save the relay state
-    });
+  if (String(topic) == "esp/get_status") {
+    // Jika ada request status dari Web, kirimkan status sekarang
+    publishRelayStatus();
+  }
+}
 
-    document.getElementById('relay2Btn').addEventListener('change', (e) => {
-      const state = e.target.checked ? 'ON' : 'OFF';
-      client.publish('esp/relay2', state);
-      relay2State = state; // Save the relay state
-    });
-  </script>
-</body>
-</html>
+void loop() {
+  if (!client.connected()) {
+    connectToMqtt();
+  }
+  client.loop();
+}
